tests/semantic_errors/andrei12_3.tl
require "ifj21"

global name : function (integer) : string, string, string, nil, number
function name    (a : integer) : string, string, string, nil, nil end

function main()
end

main()
